--- a/final exam/Views/Shared/_Layout.cshtml
+++ b/final exam/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("顯示星期", "week", "Exam")</li>
+                    <li>@Html.ActionLink("News", "", "News")</li>
                 </ul>
             </div>
         </div>
@@ -32,7 +34,11 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - 我的 ASP.NET 應用程式</p>
+            <p>&copy; <script language="javascript">
+    var Today = new Date();
+    document.write(Today.getFullYear() + " - " + (Today.getMonth() + 1) + "/" + Today.getDate());
+</script></p>
+ 
         </footer>
     </div>
 
